# aitui

./: .gitignore  Cargo.toml
docs/: ARCHITECTURE.md  CODE_AUDIT.md  DECISIONS.md  FEATURES.md  README.md  ROADMAP.md  STANDARDS.md
src/: main.rs  new.rs  skills.rs  tui.rs
src/agent/: access.rs  executor.rs  file_search.rs  mod.rs  parser.rs  tools.rs
src/api/: client.rs  mock.rs  mod.rs  models.rs  stream.rs
src/app/: action.rs  clipboard.rs  commands.rs  effects.rs  input_buffer.rs  mod.rs  notify.rs  overlay.rs  reducer.rs  state.rs
src/config/: config.rs  mod.rs
src/domain/: blocks.rs  mod.rs  session.rs
src/files/: image.rs  mod.rs  reader.rs
src/input/: handler.rs  keymap.rs  mod.rs  vim.rs
src/render/: chat.rs  document.rs  highlight.rs  image.rs  mod.rs  search.rs  theme.rs  wrap.rs
src/ui/: chat.rs  help.rs  input.rs  layout.rs  mod.rs  overlay.rs  scrollbar.rs  statusbar.rs  todo.rs
