[package]
name = "aitui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aitui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio      = { version = "1", features = ["full"] }

# HTTP client
reqwest    = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Image support (encode for API + terminal graphics)
base64     = "0.22"
image      = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Config
toml       = "0.8"

# Error handling
anyhow     = "1"

# Async stream support
futures-util = "0.3"

# Unicode width for correct wrapping / cursor math
unicode-width = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
