[package]
name = "aitui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aitui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio      = { version = "1", features = ["full"] }

# HTTP client
reqwest    = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Image support (encode for API + terminal graphics)
base64     = "0.22"
image      = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Config
toml       = "0.8"

# Error handling
anyhow     = "1"

# Async stream support
futures-util = "0.3"

# Unicode width for correct wrapping / cursor math
unicode-width = "0.1"

# Syntax highlighting for code / file previews (tree-sitter grammars).
tree-sitter            = "0.25"
tree-sitter-highlight  = "0.25"
tree-sitter-rust       = "0.24"
tree-sitter-python     = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-json       = "0.24"
tree-sitter-bash       = "0.23"
tree-sitter-go         = "0.23"
tree-sitter-c          = "0.23"
tree-sitter-css        = "0.23"
tree-sitter-html       = "0.23"

[profile.release]
opt-level = 3
lto = "thin"
